# midi2input

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  Diary.md  INSTALL.archlinux.md  INSTALL.debian-bullseye.md  INSTALL.md  INSTALL.ubuntu-20.04.md  LICENCE.md  Makefile  README.md  ddj-wego.lua  mid2key.c  midi2input.c  notes.md  test
cfg/: Denon-DN-SC2000.lua  Pioneer-DDJ-WeGO.lua  basic.lua  config.lua  ddj-wego.lua
doc/: CMakeLists.txt  README.in.md  README.md.in  docs.cmake  m2i.1.in  midi2input.1  midi2input.1.in
include/: optionparser.h
pkg/: PKGBUILD
res/applications/: m2i.desktop
res/icons/: CMakeLists.txt  m2i.xcf
src/: CMakeLists.txt  Makefile  alsa.cpp  alsa.h  cache_data.cpp  cache_data.h  inotify.cpp  inotify.h  jack.cpp  jack.h  log.h  lua.cpp  lua.h  main.cpp  main.h  midi.cpp  midi.h  midi2input.c  midi2input.cpp  options.h  trayicon.cpp  trayicon.h  uinput.cpp  uinput.h  util.cpp  util.h  x11.cpp  x11.h
src/elog/: logger.h
